--- a/config/database.yml
+++ b/config/database.yml
@@ -22,13 +22,13 @@ default: &default
 
 development:
   <<: *default
-  database: kleomarcus_development
+  database: kleomarcus
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
   # When left blank, PostgreSQL will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: kleomarcus
+  #username:
 
   # The password associated with the PostgreSQL role (username).
   #password:
@@ -85,20 +85,7 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  primary: &primary_production
-    <<: *default
-    database: kleomarcus_production
-    username: kleomarcus
-    password: <%= ENV["KLEOMARCUS_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: kleomarcus_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: kleomarcus_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *primary_production
-    database: kleomarcus_production_cable
-    migrations_paths: db/cable_migrate
+  <<: *default
+  database: kleomarcus_production
+  username: kleomarcus
+  password: <%= ENV["KLEOMARCUS_DATABASE_PASSWORD"] %>
